--- a/popup.html
+++ b/popup.html
@@ -2,19 +2,42 @@
   <title>Testing adding a title</title>
   <head>
     <style>
+      .popup-container {
+        width: 300px; /* Set the desired width for your popup */
+        padding: 20px; /* Add padding for better appearance */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+      .button-table {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 10px;
+      }
+      body {
+        background-color: papayawhip;
+        /* Remove margin and set background color for the entire popup */
+      }
+
+      /* Apply styles to the buttons */
       button {
-        height: 300px;
-        width: 300px;
-        outline: none;
-        border: none;
-        background: none;
+        height: 100px;
+        width: 100px;
         cursor: pointer;
       }
     </style>
   </head>
   <body>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <button id="change-color-button">Change Color</button>
+    <div class="popup-container">
+      <!-- Place the buttons within the popup container -->
+      <div class="button-table">
+        <button id="changeColorRed">Change to Red</button>
+        <button id="changeColorBlue">Change to Blue</button>
+        <button id="changeColorGreen">Change to Green</button>
+        <button id="changeColorYellow">Change to Yellow</button>
+      </div>
+    </div>
     <script src="popup.js"></script>
   </body>
 </html>
