refactored content.js

--- a/popup.html
+++ b/popup.html
@@ -38,6 +38,7 @@
         <button id="changeColorYellow">Change to Yellow</button>
       </div>
     </div>
+    <button id="changeFont">Change font</button>
     <script src="popup.js"></script>
   </body>
 </html>
