--- a/popup.html
+++ b/popup.html
@@ -71,22 +71,25 @@
         background-color: white;
         transition: .4s;
       }
-
       input:checked + .slider {
         background-color: #2196F3;
       }
-
       input:checked + .slider:before {
         transform: translateX(26px);
       }
-
       /* Rounded sliders */
       .slider.round {
         border-radius: 34px;
       }
-
       .slider.round:before {
         border-radius: 50%;
+      }
+      label[for="toggleSelectionMode"] {
+        margin-right: 10px;
+        align-items: center;
+        line-height: 34px;
+        margin-top: -10px;
+        margin-bottom: 2px;
       }
 
     </style>
@@ -114,12 +117,17 @@
 
     </div>
     <button id="changeFont">Change font</button>
-    
-    <!-- Toggle selection -->
-    <label class="switch">
-      <input type="checkbox" id="toggleSelectionMode">
-      <span class="slider round"></span>
-    </label>
+
+    <div style="display: flex; align-items: center;">
+      <label>
+          Toggle Selection Mode
+          <div class="switch">
+              <input type="checkbox" id="toggleSelectionMode">
+              <span class="slider round"></span>
+          </div>
+      </label>
+    </div>
+  
     <script src="popup.js"></script>
   </body>
 </html>
