added font selector dropdown list

--- a/popup.html
+++ b/popup.html
@@ -121,6 +121,15 @@
     </div>
     <button id="changeFont">Change font</button>
 
+    <select id="fontSelector" class="input" onchange="changingFontStyle (this);">
+      <option value="Times New Roman" elected="selected">
+         Times New Roman
+      </option>
+      <option value="Arial">Arial</option>
+      <option value="fantasy">Fantasy</option>
+      <option value="cursive">cursive</option>
+   </select>
+
     <label class="toggle-label">
       Toggle Selection Mode:    
       <div class="switch">
