Removed change font button

--- a/popup.html
+++ b/popup.html
@@ -119,13 +119,14 @@
       <div class="selected-color" id="selectedColor">Selected Color: </div>
 
     </div>
-    <button id="changeFont">Change font</button>
 
     <select id="fontSelector" class="input" onchange="changingFontStyle (this);">
-      <option value="Times New Roman" elected="selected">
-         Times New Roman
+      <option value="Arial" elected="selected">
+         Arial
       </option>
-      <option value="Arial">Arial</option>
+      <option value="Times New Roman">Times New Roman</option>
+      <option value="comic sans ms">Comic Sans</option>
+      <option value="andale mono">Andale Mono</option>
       <option value="fantasy">Fantasy</option>
       <option value="cursive">cursive</option>
    </select>
