added font color selector

--- a/popup.html
+++ b/popup.html
@@ -118,6 +118,14 @@
       <!-- Display the selected color -->
       <div class="selected-color" id="selectedColor">Selected Color: </div>
 
+      <input
+        type="color"
+        class="color-selector"
+        id="fontColorSelector"
+        value="#000000"
+      />
+      <div class="selected-color" id="fontColorSelector">Selected Color: </div>
+
     </div>
 
     <select id="fontSelector" class="input" onchange="changingFontStyle (this);">
