Fixed font color selector text display

--- a/popup.html
+++ b/popup.html
@@ -124,7 +124,7 @@
         id="fontColorSelector"
         value="#000000"
       />
-      <div class="selected-color" id="fontColorSelector">Selected Color: </div>
+      <div class="selected-color" id="fontColorSelected">Selected Color: </div>
 
     </div>
 
