--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
       }
       /* Apply styles to the buttons */
       button {
-        height: 100px;
+        height: 70px;
         width: 100px;
         cursor: pointer;
       }
@@ -101,10 +101,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <div class="popup-container">
       <div id="buttonContainer" class="button-table">
-        <button id="changeColorRed" data-color="#ff0000">Change to Red</button>
-        <button id="changeColorBlue" data-color="#0000ff">Change to Blue</button>
-        <button id="changeColorGreen" data-color="#00ff00">Change to Green</button>
-        <button id="changeColorYellow" data-color="#ffff00">Change to Yellow</button>
+        <button id="changeColorDefault" background-color="#ffffff" font-color="#000000">Default</button>
+        <button id="changeColorDark" background-color="#000000" font-color="#ffffff">Dark Mode</button>
+        <button id="changeColorPapyrus" background-color="#f5edda" font-color="#3d1c01">Papyrus</button>
+        <button id="changeColorFresh" background-color="#daf5eb" font-color="#060030">Fresh</button>
       </div>      
 
       <!-- Color selector input -->
