--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,8 @@
       }
       body {
         background-color: papayawhip;
+        width: 300px;
+        font-family: Arial, sans-serif;
         /* Remove margin and set background color for the entire popup */
       }
       /* Apply styles to the buttons */
@@ -138,7 +140,9 @@
       </div>
     </label>
   
-  
+    <input type="text" id="searchTextbox" placeholder="Enter search query...">
+    <button id="searchButton">Search</button>
+    <div id="results"></div>
     <script src="popup.js"></script>
   </body>
 </html>
