Added working metaphor findSimilar links list

--- a/popup.html
+++ b/popup.html
@@ -95,7 +95,7 @@
         display: flex;
         align-items: center; 
       }
-
+      
 
     </style>
   </head>
@@ -152,6 +152,9 @@
     <input type="text" id="searchTextbox" placeholder="Enter search query...">
     <button id="searchButton">Search</button>
     <div id="results"></div>
+
+    <button id="findSimilarButton">Find Similar Links</button>
+    <div id="similarLinksResults"></div>
     <script src="popup.js"></script>
   </body>
 </html>
