--- a/popup.html
+++ b/popup.html
@@ -170,7 +170,7 @@
       />
 
       <!-- Display the selected color -->
-      <div class="selected-color" id="selectedColor">Selected Color: </div>
+      <div class="selected-color" id="selectedColor">Selected Background Color: </div>
 
       <input
         type="color"
@@ -178,7 +178,7 @@
         id="fontColorSelector"
         value="#000000"
       />
-      <div class="selected-color" id="fontColorSelected">Selected Color: </div>
+      <div class="selected-color" id="fontColorSelected">Selected Font Color: </div>
 
     </div>
 
