added more fonts, modified default colors

--- a/popup.html
+++ b/popup.html
@@ -157,8 +157,8 @@
       <div id="buttonContainer" class="button-table">
         <button id="changeColorDefault" background-color="#ffffff" font-color="#000000">Default</button>
         <button id="changeColorDark" background-color="#000000" font-color="#ffffff">Dark Mode</button>
-        <button id="changeColorPapyrus" background-color="#f5edda" font-color="#3d1c01">Papyrus</button>
-        <button id="changeColorFresh" background-color="#daf5eb" font-color="#060030">Fresh</button>
+        <button id="changeColorPapyrus" background-color="#f5edda" font-color="#722a03">Papyrus</button>
+        <button id="changeColorFresh" background-color="#daf5eb" font-color="#113a8d">Fresh</button>
       </div>      
 
       <!-- Color selector input -->
@@ -189,8 +189,13 @@
       <option value="Times New Roman">Times New Roman</option>
       <option value="comic sans ms">Comic Sans</option>
       <option value="andale mono">Andale Mono</option>
+      <option value="Courier">Courier</option>
       <option value="fantasy">Fantasy</option>
-      <option value="cursive">cursive</option>
+      <option value="cursive">Cursive</option>
+      <option value="Bradley Hand">Bradley Hand</option>
+      <option value="Optima">Optima</option>
+      <option value="Georgia">Georgia</option>
+      <option value="American Typewriter">American Typewriter</option>
    </select>
 
     <label class="toggle-label">
